--- a/Locales/Locales.xml
+++ b/Locales/Locales.xml
@@ -3,9 +3,10 @@
             xsi:schemaLocation="http://www.blizzard.com/wow/ui/
 ..\FrameXML\UI.xsd">
     <Script file="enUS.lua"/>
+    <Script file="enGB.lua"/>
     <Script file="deDE.lua"/>
-    <!--<Script file="frFR.lua"/>
-    <Script file="koKR.lua"/>
+    <Script file="frFR.lua"/>
+    <!--<Script file="koKR.lua"/>
     <Script file="zhCN.lua"/>
     <Script file="zhTW.lua"/>
     <Script file="esES.lua"/>
